second html page

--- a/second.html
+++ b/second.html
@@ -5,9 +5,8 @@
         <title>class activity </title>
     </header>
     <body>
-        <h1>Hello World</h1>
-        <img src="assets/fake-a-smile.jpg">
-        <a href="second.html">Click to get to page 2</a>
+        <h1>Goodbye, cruel world</h1>
+        <img src="assets/adult.html">
 
     </body>
     
