--- a/second.html
+++ b/second.html
@@ -6,7 +6,7 @@
     </header>
     <body>
         <h1>Goodbye, cruel world</h1>
-        <img src="assets/adult.html">
+        <img src="assets/adult.jpg" alt="My Hero Academia- aren't you an adult?">
 
     </body>
     
