--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </header>
     <body>
         <h1>Hello World</h1>
-        <img src="assets/fake-a-smile.jpg">
+        <img src="assets/fake-a-smile.jpg" alt="my hero academia">
+        <br>
         <a href="second.html">Click to get to page 2</a>
 
     </body>
