--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-us">
-    <header>
-        <meta charset="UTF-8">
-        <title>class activity </title>
-    </header>
-    <body>
-        <h1>Hello World</h1>
-        <img src="assets/fake-a-smile.jpg" alt="my hero academia">
-        <br>
-        <a href="second.html">Click to get to page 2</a>
-
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Alyssa Goergen</title>
+</head>
+<body>
     
+    
+</body>
 </html>
