carousel slider images

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="section">
 
       <div class="row" id="skill-icons">
+        <h2 class="center orange-text">Tech Stack</h2>
         <div class="col s12 m4">
           <div class="icon-block center">
             <img class="square-img" src="assets/images/html512-512.png">
@@ -85,25 +86,41 @@
       </div>
       <div class="row">
         <div class="carousel carousel-slider center">
-          <div class="carousel-fixed-item center">
+          <!-- <div class="carousel-fixed-item center">
             <a class="btn waves-effect white grey-text darken-text-2">button</a>
+          </div> -->
+          <div class="carousel-item grey lighten-4 orange-text" href="#one!">
+            <h3>First Panel</h3>
+
+            <figure>
+              <img class="wide-img" src="assets/images/binge.png">
+            </figure>
           </div>
-          <div class="carousel-item red white-text" href="#one!">
-            <h2>First Panel</h2>
-            <p class="white-text">This is your first panel</p>
+
+          <div class="carousel-item grey lighten-4 orange-text" href="#two!">
+            <h3>Second Panel</h3>
+            <figure>
+              <img class="wide-img" src="assets/images/chupper.png">
+            </figure>
+
           </div>
-          <div class="carousel-item amber white-text" href="#two!">
-            <h2>Second Panel</h2>
-            <p class="white-text">This is your second panel</p>
+          <div class="carousel-item grey lighten-4 orange-text" href="#three!">
+            <h3>Third Panel</h3>
+            <figure>
+              <img class="wide-img" src="assets/images/train-schedule.png">
+            </figure>
+           
           </div>
-          <div class="carousel-item green white-text" href="#three!">
-            <h2>Third Panel</h2>
-            <p class="white-text">This is your third panel</p>
+
+          <div class="carousel-item grey lighten-4 orange-text" href="#four!">
+            <h3>Fourth Panel</h3>
+            <figure>
+              <a href="https://goergena.github.io/giphy-app/">
+                <img class="wide-img" src="assets/images/giphy.png">
+              </a>
+            </figure>
           </div>
-          <div class="carousel-item blue white-text" href="#four!">
-            <h2>Fourth Panel</h2>
-            <p class="white-text">This is your fourth panel</p>
-          </div>
+
         </div>
       </div>
 
