working slides, plus prof pic

--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
     <div class="container">
       <br>
       <br>
-      <h1 class="header center orange-text">Hi, I'm Ali</h1>
+      <h1 class="header center orange-text brand-logo">Ali Goergen</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <h5 class="header col s12 light">Full-stack web developer in Cleveland, OH</h5>
+      </div>
+
+      <div class="row center">
+        <img class="prof-pic circle " src="assets/images/prof-pic.jpg">
       </div>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="mailto:alyssa.goergen@gmail.com" id="download-button" class="btn-large waves-effect waves-light orange">Contact</a>
       </div>
       <br>
       <br>
@@ -56,69 +60,173 @@
 
       <div class="row" id="skill-icons">
         <h2 class="center orange-text">Tech Stack</h2>
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block center">
-            <img class="square-img" src="assets/images/html512-512.png">
-            <img class="square-img" src="assets/images/bootstrap800-800.png">
-            <img class="square-img" src="assets/images/materialize838-838.png">
+            <img class="square-img" src="assets/images/react-384.png">
+            <img class="square-img" src="assets/images/js512-512.png">
+            <img class="square-img" src="assets/images/js1052.png">
 
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block center">
-            <img class="square-img" src="assets/images/js512-512.png">
             <img class="square-img" src="assets/images/jquery240-240.jpg">
             <img class="square-img" src="assets/images/express800-800.png">
+            <img class="square-img" src="assets/images/mysql800-800.png">
 
           </div>
         </div>
-        <div class="col s12 m4">
+
+        <div class="col s12 m3">
           <div class="icon-block center">
 
-            <img class="square-img" src="assets/images/mysql800-800.png">
             <img class="square-img" src="assets/images/sequelize250-250.png">
             <img class="square-img" src="assets/images/mongodb800-800.png">
+            <img class="square-img" src="assets/images/css3-1024.png">
+          </div>
+        </div>
 
+        <div class="col s12 m3">
+          <div class="icon-block center">
+            <img class="square-img" src="assets/images/bootstrap800-800.png">
+            <img class="square-img" src="assets/images/materialize838-838.png">
+            <img class="square-img" src="assets/images/html512-512.png">
           </div>
         </div>
 
       </div>
       <div class="row">
+        <h2 class="center orange-text">Projects</h2>
         <div class="carousel carousel-slider center">
-          <!-- <div class="carousel-fixed-item center">
-            <a class="btn waves-effect white grey-text darken-text-2">button</a>
-          </div> -->
-          <div class="carousel-item grey lighten-4 orange-text" href="#one!">
-            <h3>First Panel</h3>
 
+          <div class="carousel-item grey lighten-2" href="#one!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/ItsRecBall/rekt">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://itsrecball.herokuapp.com/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
             <figure>
-              <img class="wide-img" src="assets/images/binge.png">
+              <img class="wide-img" src="assets/images/rec-ball.png">
             </figure>
+
+            <h5 class="orange-text">It's Rec Ball!</h5>
+            <p>A way for rec sports leagues to record and view team stats.</p>
+            <p>Technologies: React, Redux, Express, MySql, Sequelize, WebPack, Axios, Bootstrap</p>
           </div>
 
-          <div class="carousel-item grey lighten-4 orange-text" href="#two!">
-            <h3>Second Panel</h3>
+          <div class="carousel-item grey lighten-2" href="#two!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/goergena/react-memory-game">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://ag-memory-game.herokuapp.com/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
+            <figure>
+              <img class="wide-img" src="assets/images/memory-game.png">
+            </figure>
+
+            <h5 class="orange-text">Memory Game</h5>
+            <p>A game where you have to guess each character once! The characters rearrange on every click!</p>
+            <p>Technologies: React, Bootstrap</p>
+          </div>
+
+          <div class="carousel-item grey lighten-2" href="#three!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/goergena/trivia-advanced">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://goergena.github.io/trivia-advanced/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
+            <figure>
+              <img class="wide-img" src="assets/images/trivia-game.png">
+            </figure>
+
+            <h5 class="orange-text">Trivia Game</h5>
+            <p>Test your Harry Potter Knowledge in this trivia game! 20 seconds per question!</p>
+            <p>Technologies: jQuery, Bootstrap</p>
+          </div>
+
+          <div class="carousel-item grey lighten-2" href="#four!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/bingers/binge-app">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://bingers.github.io/binge-app/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
+            <figure>
+              <a target="_blank" href="https://bingers.github.io/binge-app/">
+                <img class="wide-img" src="assets/images/binge.png">
+              </a>
+            </figure>
+
+            <h5 class="orange-text">Binge
+            </h5>
+            <p>An app to help you decide what movie to watch and what to eat while watching it.</p>
+            <p>Technologies: jQuery, AJAX, Bootstrap</p>
+          </div>
+
+          <div class="carousel-item grey lighten-2" href="#five!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/deltaforcetuesday/recipes">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://frozen-retreat-33043.herokuapp.com/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
             <figure>
               <img class="wide-img" src="assets/images/chupper.png">
             </figure>
+            <h5 class="orange-text">Chupper Time</h5>
+            <p>A recipe website to create and share recipes.</p>
+            <p>Technologies: Node.js, Bcrypt, Express, Heroku, Passport, MySql, Sequelize, Tape, jQuery</p>
 
           </div>
-          <div class="carousel-item grey lighten-4 orange-text" href="#three!">
-            <h3>Third Panel</h3>
+
+          <div class="carousel-item grey lighten-2" href="#six!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/goergena/train-schedule">
+                <i class="material-icons">description</i>
+              </a>
+              <a target="_blank" href="https://goergena.github.io/train-schedule/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
             <figure>
               <img class="wide-img" src="assets/images/train-schedule.png">
             </figure>
-           
+            <h5 class="orange-text">Train Schedule</h5>
+            <p>A way to check and track train arrivals</p>
+            <p>Technologies: jQuery, Firebase, Moment.js</p>
+
           </div>
 
-          <div class="carousel-item grey lighten-4 orange-text" href="#four!">
-            <h3>Fourth Panel</h3>
-            <figure>
-              <a href="https://goergena.github.io/giphy-app/">
-                <img class="wide-img" src="assets/images/giphy.png">
+          <div class="carousel-item grey lighten-2" href="#seven!">
+            <div class="fix-icon royal-text">
+              <a target="_blank" href="https://github.com/goergena/giphy-app">
+                <i class="material-icons">description</i>
               </a>
+              <a target="_blank" href="https://goergena.github.io/giphy-app/">
+                <i class="material-icons">open_in_new</i>
+              </a>
+            </div>
+            <figure>
+              <img class="wide-img" src="assets/images/giphy.png">
             </figure>
+            <h5 class="orange-text">Giphy App</h5>
+            <p>An animal gifs page using GIPHY API. Play and pause gifs. Add new animal buttons.</p>
+            <p>Technologies: jQuery, GIPHY API, Bootstrap</p>
+
           </div>
 
         </div>
@@ -126,12 +234,13 @@
 
       <!--   Icon Section   -->
       <div class="row">
+        <h2 class="center orange-text">Experience</h2>
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center royal-text">
               <i class="material-icons">flash_on</i>
             </h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">Coding Bootcamp TA</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.
               Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
@@ -170,51 +279,38 @@
   </div>
 
   <footer class="page-footer salmon">
-    <div class="container">
+   
       <div class="row">
+          <div class="col l3 s12">
+            <img src="">
+            </div>
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
+          <h5 class="white-text">Bio</h5>
           <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support
             and continue development on this project and is greatly appreciated.</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li>
-              <a class="white-text" href="#!">Link 1</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 2</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 3</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Link 4</a>
-            </li>
-          </ul>
-        </div>
+
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
             <li>
-              <a class="white-text" href="#!">Link 1</a>
+              <a class="white-text" href="#!">LinkedIn</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 2</a>
+              <a class="white-text" href="#!">GitHub</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 3</a>
+              <a class="white-text" href="mailto:alyssa.goergen@gmail.com">Email</a>
             </li>
             <li>
-              <a class="white-text" href="#!">Link 4</a>
+              <a class="white-text" href="#!">Instagram</a>
             </li>
           </ul>
         </div>
       </div>
-    </div>
+   
     <div class="footer-copyright">
       <div class="container center">
         Made by Ali
