--- a/index.html
+++ b/index.html
@@ -238,37 +238,37 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center royal-text">
-              <i class="material-icons">flash_on</i>
+              <i class="material-icons">group</i>
             </h2>
             <h5 class="center">Coding Bootcamp TA</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.
-              Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Case Western Reserve University Full-Stack Web Development Boot Camp</p>
+            <p>July 2018-Present</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center royal-text">
-              <i class="material-icons">group</i>
+              <i class="material-icons">devices</i>
             </h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Social Media/Email Marketing Coordinator</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates
-              components and animations that provide more feedback to users. Additionally, a single underlying responsive
-              system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Lisa Renee's Dance and Enrichment Studios</p>
+            <p class="light">Jan 2018-Present</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center royal-text">
-              <i class="material-icons">settings</i>
+              <i class="material-icons">print</i>
             </h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Bilingual Paralegal</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are
-              also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">The Costas Network Law Center</p>
+            <p class="light">2014-2017</p>
+            <p></p>
           </div>
         </div>
       </div>
@@ -279,38 +279,43 @@
   </div>
 
   <footer class="page-footer salmon">
-   
-      <div class="row">
-          <div class="col l3 s12">
-            <img src="">
-            </div>
-        <div class="col l6 s12">
-          <h5 class="white-text">Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support
-            and continue development on this project and is greatly appreciated.</p>
 
-
-        </div>
-
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li>
-              <a class="white-text" href="#!">LinkedIn</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">GitHub</a>
-            </li>
-            <li>
-              <a class="white-text" href="mailto:alyssa.goergen@gmail.com">Email</a>
-            </li>
-            <li>
-              <a class="white-text" href="#!">Instagram</a>
-            </li>
-          </ul>
-        </div>
+    <div class="row">
+      <div class="col l3 s12">
+        <img src="">
       </div>
-   
+      <div class="col l6 s12">
+        <h5 class="white-text">Bio</h5>
+        <p class="grey-text text-lighten-4">
+          I have my BA in Neuroscience and Spanish from Kenyon College '14.
+          Started coding in 2017 and haven't stopped! I received a certificate from CWRU's Coding Boot Camp in July 2018 and 
+          am now a TA (part-time). I get to spend a lot of time on my personal coding projects and learning targets (Python, Vue.js) 
+          as I look for a full-time position as a developer. Looking for a good fit on a great dev team so we can make cool stuff and 
+          play with interesting problems. Other interests: kickboxing, 
+        </p>
+
+
+      </div>
+
+      <div class="col l3 s12">
+        <h5 class="white-text">Connect</h5>
+        <ul>
+          <li>
+            <a class="white-text" href="#!">LinkedIn</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">GitHub</a>
+          </li>
+          <li>
+            <a class="white-text" href="mailto:alyssa.goergen@gmail.com">Email</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Instagram</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="footer-copyright">
       <div class="container center">
         Made by Ali
