--- a/index.html
+++ b/index.html
@@ -281,17 +281,16 @@
   <footer class="page-footer salmon">
 
     <div class="row">
-      <div class="col l3 s12">
-        <img src="">
-      </div>
-      <div class="col l6 s12">
+      <div class="col l9 s12">
         <h5 class="white-text">Bio</h5>
         <p class="grey-text text-lighten-4">
-          I have my BA in Neuroscience and Spanish from Kenyon College '14.
-          Started coding in 2017 and haven't stopped! I received a certificate from CWRU's Coding Boot Camp in July 2018 and 
-          am now a TA (part-time). I get to spend a lot of time on my personal coding projects and learning targets (Python, Vue.js) 
-          as I look for a full-time position as a developer. Looking for a good fit on a great dev team so we can make cool stuff and 
-          play with interesting problems. Other interests: kickboxing, 
+            Full stack developer excited about databases, React.js, and vanilla JS. Being on a 
+            team and having a project gives me life. I have my BA in Neuroscience and Spanish 
+            from Kenyon College '14. Started coding in 2017 and haven't stopped! I received a 
+            certificate from CWRU's Coding Boot Camp in July 2018 and am now a TA there 
+            (evening part-time). I spend my days learning by building new code projects as I 
+            look for a full-time position as a full stack developer. Looking for a good fit 
+            on a great dev team. Other interests: guitar, kickboxing, really good food.
         </p>
 
 
@@ -301,16 +300,13 @@
         <h5 class="white-text">Connect</h5>
         <ul>
           <li>
-            <a class="white-text" href="#!">LinkedIn</a>
+            <a class="white-text" href="https://www.linkedin.com/in/alyssagoergen/">LinkedIn</a>
           </li>
           <li>
-            <a class="white-text" href="#!">GitHub</a>
+            <a class="white-text" href="https://github.com/goergena">GitHub</a>
           </li>
           <li>
             <a class="white-text" href="mailto:alyssa.goergen@gmail.com">Email</a>
-          </li>
-          <li>
-            <a class="white-text" href="#!">Instagram</a>
           </li>
         </ul>
       </div>
