--- a/index.html
+++ b/index.html
@@ -240,10 +240,13 @@
             <h2 class="center royal-text">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">Coding Bootcamp TA</h5>
+            <h5 class="center">Teaching Assistant</h5>
 
-            <p class="light">Case Western Reserve University Full-Stack Web Development Boot Camp</p>
+            <p class="center">Case Western Reserve University</p>
             <p>July 2018-Present</p>
+            <p>Help students learn to code during an intensive 24-week, part-time full stack coding boot camp. 
+              Provide support and serve as a resource so students can build their problem-solving skills. 
+              Answer questions, give feedback, and grade assignments.</p>
           </div>
         </div>
 
@@ -254,8 +257,11 @@
             </h2>
             <h5 class="center">Social Media/Email Marketing Coordinator</h5>
 
-            <p class="light">Lisa Renee's Dance and Enrichment Studios</p>
+            <p class="center">Lisa Renee's Dance and Enrichment Studios</p>
             <p class="light">Jan 2018-Present</p>
+            <p>Design, manage, and execute social media and email marketing campaigns. 
+              Update website content and design as needed. Attend the front desk; welcome dancers 
+              into the studio and shoppers into the boutique.</p>
           </div>
         </div>
 
@@ -264,10 +270,15 @@
             <h2 class="center royal-text">
               <i class="material-icons">print</i>
             </h2>
-            <h5 class="center">Bilingual Paralegal</h5>
+            <h5 class="center">Legal Assistant</h5>
 
-            <p class="light">The Costas Network Law Center</p>
+            <p class="center">The Costas Network Law Center</p>
             <p class="light">2014-2017</p>
+            <p>Specialized in humanitarian applications, drafting personal statements with clients 
+              describing hardships. Collaborated with attorneys and legal assistants to meet deadlines 
+              and prepare cases. Managed 150+ caseload and delegated tasks to legal assistants. Provided 
+              a high level of customer service in Spanish and English. Trained and mentored new legal 
+              assistants and interns.</p>
             <p></p>
           </div>
         </div>
@@ -314,7 +325,7 @@
 
     <div class="footer-copyright">
       <div class="container center">
-        Made by Ali
+       (c) Ali Goergen 2018
       </div>
     </div>
   </footer>
