--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">AG</a>
       <ul class="right hide-on-med-and-down">
-        <li>
-          <a href="#">Navbar Link</a>
-        </li>
+        <li> <a href="#skills">Skills</a> </li>
+        <li><a href="#projects">Projects</a>  </li>
+        <li><a href="#experience">Experience</a> </li>
+        <li> <a href="#contact">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
         <li>
-          <a href="#">Navbar Link</a>
+            <li> <a href="#skills">Skills</a> </li>
+            <li><a href="#projects">Projects</a>  </li>
+            <li><a href="#experience">Experience</a> </li>
+            <li> <a href="#contact">Contact</a></li>
         </li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger">
@@ -58,8 +62,8 @@
   <div class="container">
     <div class="section">
 
-      <div class="row" id="skill-icons">
-        <h2 class="center orange-text">Tech Stack</h2>
+      <div class="row section scrollspy" id="skill-icons">
+        <h2 class="center orange-text" id="kills">Skills</h2>
         <div class="col s12 m3">
           <div class="icon-block center">
             <img class="square-img" src="assets/images/react-384.png">
@@ -96,8 +100,8 @@
         </div>
 
       </div>
-      <div class="row">
-        <h2 class="center orange-text">Projects</h2>
+      <div class="row section scrollspy">
+        <h2 class="center orange-text" id="projects">Projects</h2>
         <div class="carousel carousel-slider center">
 
           <div class="carousel-item grey lighten-2" href="#one!">
@@ -233,8 +237,8 @@
       </div>
 
       <!--   Icon Section   -->
-      <div class="row">
-        <h2 class="center orange-text">Experience</h2>
+      <div class="row section scrollspy">
+        <h2 class="center orange-text" id="experience">Experience</h2>
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center royal-text">
@@ -291,7 +295,7 @@
 
   <footer class="page-footer salmon">
 
-    <div class="row">
+    <div class="row section scrollspy" id="contact">
       <div class="col l9 s12">
         <h5 class="white-text">Bio</h5>
         <p class="grey-text text-lighten-4">
