bug fix skills id tag

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="section">
 
       <div class="row section scrollspy" id="skill-icons">
-        <h2 class="center orange-text" id="kills">Skills</h2>
+        <h2 class="center orange-text" id="skills">Skills</h2>
         <div class="col s12 m3">
           <div class="icon-block center">
             <img class="square-img" src="assets/images/react-384.png">
