copyright symbol fix

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     <div class="footer-copyright">
       <div class="container center">
-       (c) Ali Goergen 2018
+       &copy Ali Goergen 2018
       </div>
     </div>
   </footer>
