--- a/index.html
+++ b/index.html
@@ -309,13 +309,11 @@
       <div class="col l9 s12">
         <h5 class="white-text">Bio</h5>
         <p class="grey-text text-lighten-4">
-          Full stack developer excited about databases, React.js, and vanilla JS. Being on a
-          team and having a project gives me life. I have my BA in Neuroscience and Spanish
-          from Kenyon College '14. Started coding in 2017 and haven't stopped! I received a
-          certificate from CWRU's Coding Boot Camp in July 2018 and am now a TA there
-          (evening part-time). I spend my days learning by building new code projects as I
-          look for a full-time position as a full stack developer. Looking for a good fit
-          on a great dev team. Other interests: guitar, kickboxing, really good food.
+          Full stack web developer excited about databases, React.js, and vanilla JS. Being on a
+          team and having a project gives me life. I am available for a full-time position, freelance, and contract work. 
+        
+          I have my BA in Neuroscience and Spanish
+          from Kenyon College '14. I started coding in 2017 and haven't stopped! Other interests: rollerblading, knitting, really good food.
         </p>
 
 
@@ -339,7 +337,7 @@
 
     <div class="footer-copyright">
       <div class="container center">
-        &copy Ali Goergen 2018
+        &copy Ali Goergen 2020
       </div>
     </div>
   </footer>
