--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center royal-text">
-            <i class="material-icons">print</i>
+            <i class="material-icons">code</i>
           </h2>
           <h5 class="center">Web Developer</h5>
 
